Add local JavaFX SDK to javac module path